--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,10 @@ body {
 }
 
 /* Estilos para el encabezado 1 */
-#header1 {
+
+.textocoy {
+  background-color: gold;
   text-align: center;
-  font-size: 36px;
-  color: gold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Efecto de sombra suave */
 }
 
 /* Estilos para el botón "Productos" */
@@ -64,4 +63,51 @@ body {
   height: auto;
   display: block;
   margin: 0 auto;
+}
+
+.textocafe {
+  background-color: gold;
+  color: black;
+}
+
+/* Seccion de contacto */
+
+p {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 20px;
+}
+
+.contacto-section,
+.privacidad-section,
+.about-section {
+  width: 100%;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: black;
+  color: #ddd;
+  text-align: center;
+}
+
+.cecion {
+  background-color: black;
+  color: #ddd;
+  text-align: center;
+  border-radius: 10px;
+  margin: 20px auto;
+}
+
+/* BOTON ESTILOS */
+.producto {
+  color: gold;
+  width: 20%;
+  height: 60px;
+  background-color: red;
+}
+
+.productods-fixed {
+  position: fixed;
+  top: 10px; /* Distancia desde la parte superior de la ventana */
+  right: 10px; /* Distancia desde el borde derecho de la ventana */
+  z-index: 999; /* Asegura que el botón esté por encima de otros elementos */
 }
